--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <head>
     <script src="/socket.io/socket.io.js"></script>
-
+    <link rel="stylesheet" type="text/css" href="new.css" />
   </head>
   <body>
   <p>
