Potężny commit z wersją roboczą

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,8 +13,8 @@
     </form>
   </p>
   <p>
-    <form action="join", method="POST">
-    <input id="identifier" type="text" name="identifier" value="<%= context.id%>">
+    <form action="/join", method="POST">
+    <input id="identifier" type="number" name="identifier" value="<%= context.id%>">
       <button>Dołącz</button>
     </form>
   </p>
