Added list of free rooms

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -23,5 +23,10 @@
       <button>Losowy pokój</button>
     </form>
   </p>
+  <p> 
+    <form action="/select", method="GET">
+      <button>Lista pokoi</button>
+    </form>
+  </p>
   </body>
 </html>
