--- a/views/defense.ejs
+++ b/views/defense.ejs
@@ -37,7 +37,9 @@
   <body>
     <p>
       ID twojego pokoju <%= context.id %>
+
     </p>
+    <p><%= context.defender %> vs <%= context.attacker %></p>
     <p>
       <div id='messages'></div>
     </p>
