--- a/views/defense.ejs
+++ b/views/defense.ejs
@@ -19,7 +19,7 @@
           if(button.disabled){
             button.disabled = false; 
             gameState = arg
-            msg.innerHTML = "Twój ruch<br>";
+            msg.innerHTML = "Twój ruch (czarne)<br>";
           }
         })
 
