--- a/views/defense.ejs
+++ b/views/defense.ejs
@@ -11,6 +11,7 @@
       window.addEventListener('load', function(){
         const button = document.getElementById('myButton');
         const msg = document.getElementById('messages');
+        let score = document.getElementById('score');
         button.disabled = true;
         msg.innerHTML = "Ruch przeciwnika<br>";
         var socket = io();
@@ -19,6 +20,9 @@
           if(button.disabled){
             button.disabled = false; 
             gameState = arg
+            whiteCount = gameState.board.flat().filter(el => el==-1).length
+            blackCount = gameState.board.flat().filter(el => el==1).length
+            score.innerHTML = `białe: ${whiteCount} czarne: ${blackCount}`;
             msg.innerHTML = "Twój ruch (czarne)<br>";
           }
         })
@@ -26,10 +30,15 @@
         button.addEventListener('click', function(){
           socket.emit('defense', {board: gameState.board, player: (-1)*gameState.player});
           button.disabled = true; 
+          whiteCount = gameState.board.flat().filter(el => el==-1).length
+          blackCount = gameState.board.flat().filter(el => el==1).length
+          score.innerHTML = `białe: ${whiteCount} czarne: ${blackCount}`;
           msg.innerHTML = "Ruch przeciwnika<br>";
           
         })
-        
+        whiteCount = gameState.board.flat().filter(el => el==-1).length
+        blackCount = gameState.board.flat().filter(el => el==1).length
+        score.innerHTML = `białe: ${whiteCount} czarne: ${blackCount}`;
         socket.emit('joinn', {id:'<%= context.id %>'});
       })
     </script>
@@ -49,5 +58,8 @@
       <!--</form>-->
     </p>
     <button id="myButton">Wykonaj</button>
+    <p>
+      <div id='score'></div>
+    </p>
   </body>
 </html>
