--- a/views/defense.ejs
+++ b/views/defense.ejs
@@ -32,6 +32,7 @@
 
         button.addEventListener('click', function(){
           socket.emit('defense', {board: gameState.board, player: (-1)*gameState.player});
+          madeMove = false;
           button.disabled = true; 
           whiteCount = gameState.board.flat().filter(el => el==-1).length
           blackCount = gameState.board.flat().filter(el => el==1).length
