--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-  ReverSI 
+  <b>ReverSI</b>
   <p>
     <form action="/new", method="GET">
       <button>Nowy pokój</button>
